Android 相册选择库使用最新版本v3.11.2项目可运行

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,16 +1,28 @@
 buildscript {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        jcenter { url 'https://maven.aliyun.com/repository/jcenter/' }
+        maven { url "https://jitpack.io" }
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:7.1.2'
     }
 }
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        jcenter { url 'https://maven.aliyun.com/repository/jcenter/' }
+        maven { url "https://jitpack.io" }
         google()
         mavenCentral()
     }
@@ -24,6 +36,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
